--- a/docs/Light paper/002.md
+++ b/docs/Light paper/002.md
@@ -1,1 +1,25 @@
+Глава 1. Создание Блокчейн. 
 
+Первой задачей перед нами встал вопрос о реализации всего задуманного. Здесь нужна была качественная основа, на чём будет всё держаться. Без хорошего фундамента нет смысла строить небоскрёб. 
+Мы начали работать над созданием собственного блокчейна...
+
+Наблюдая за ходом развития блокчейн индустрии, можно обратить внимание, что в самом начале основной упор делался на децентрализацию и безопасность, которую при должном развитии сети, отлично обеспечивали блокчейны PoW. 
+Со временем, колличество участников сети росло, и вместе с этим, росли и требования к возможностям сети. Стоял вопрос о повышении масштабируемости, и двигаясь в данном направлении, на смену консенсуса PoW, пришёл более приспособленный для этого, консенсус PoS и его производные. Однако, в консенсусах PoS заметно страдает такой показатель как децентрализация.
+Мы, команда проекта DES, понимаем, что новая эра WEB3.0, как в воздухе нуждается в блокчейнах, в равной степени решающих все три проблемы трилеммы масштабирования блокчейн. Если кратко, то это:
+- Безопасность работы приложений (основная черта и преимущество WEB3.0 над WEB2.0);
+
+- Высокая децентрализация (приложения по своей сути должны использовать максимально децентрализованные решения);
+
+- Масштабируемость сети, позволяющая достигнуть пропускной способности на уровне централизованных решений. Если сравнивать по  скорости совершения платёжей, то для конкурирования, например с Visa, желательно достигать показателя ближе к 65 тыс. транзакций в секунду.
+
+Теперь о решениях, которые мы предлагаем, так же по пунктам:
+
+-  Начнём с того, что в проекте будет использован форк сети Cosmos, который сам по себе зарекомендовал себя довольно не плохо. Так же мы добавили к нему функцию Time UP, которая позволяет оценивать качество работы нод и продолжительность их взаимодействия с сетью. Более подробно данный мехванихм описан в технической части данного документа.
+
+- для повышения децентрализации сети, наш консенсус DeDPoS (Decentralized-DpoS), будет включать в себя свойства, как уже известного DPoS, так и внедряется учёт активности участников DAO, которое влияет на силу голоса при принятии решений по развитию проекта. Данный механизм исключает зависимость сети от финансовых возможностей её участников. Более подробно консенсус описан в технической части данного документа.
+
+- Что касается масштабируемости сети. Для повышения пропускной способности, мы намерены использовать шардинг. С ростом сети, колличество шардов будет увеличиваться. Так же будет возможность разделения шардов по направлениям (например для платёжных систем будут использоваться отдельные группы нод). Все возможности изменений будут заложены в гинезис блок изначально. Более подробно механика шардинга описана в технической части данного документа.
+
+Что мы имеем в итоге: планируется создание быстрого (вплоть до конкурентоспособных скоростей с текущими централизованными платёжными системами), безопасного, децентрализованного блокчейн на экологичном консенсусе DeDPoS  с низкими комиссиями, что сделает его максимально подходящим для развития Web3.0 и dApps
+
+Следующим этапом, стоит вопрос привлечения людей...
