--- a/docs/Light paper/005.md
+++ b/docs/Light paper/005.md
@@ -1,1 +1,16 @@
+ Глава 4. Безопасность.
 
+Вопросу безопасности было посвященно очень много времени на всех стадиях создания проекта. На каждом этапе развития, при каждом внедрении новых продуктов и модулей, команда DES  думала о безопасности пользователей сети и о безопасности самой сети в целом.
+
+В первой главе мы поднимали тему децентрализации сети, говоря о трилеме масштабирования блокчейн. Там упомяналось о системе учёта активности, которая исключает зависимость сети от финансовых возможностей её участников. Это и есть тот совершенный механизм, который обезопасит сеть от власти в одних руках. Выражаясь простым языком, для того, что бы иметь какую либо силу голоса в проекте, и уж тем более иметь возможность инициировать голосования, участник сети должен быть чуть ли не «бой-скаутом». Монеты сети будут майниться активностью участников: создание новых dApp приложений, активная позиция в социальных сетях и на форумах компании, создание различных информационных ресурсов, рекламных акций… в общем, за всевозможные действия, которые приводят к развитию и масштабированию эко системы DES, за всё это участники будут получать вознаграждения. Так же у каждого участника будет рейтинг.
+Накапливая свой положительный рейтинг, совершая активность в различных направлениях, каждый участник сети способен увеличить свою силу голоса и добиться признания остальных участников, став экспертом в какой либо области. Со временем, при положительных результатах активности, рядовой участник может стать членом совета управления DAO как одного из продуктов, так и самого DAO DES.
+В том случае, если участник сети ведёт себя не добросовестно, это отражается на его рейтинге и моментально следуют штрафы, относительно тяжести его поступка. Все правила поведения «что такое хорошо и что такое плохо», изначально записываются сразу в блокчейн и регулируются только смарт-контрактом. Изменения и дополнения могут вносить участники сети путём голосования. Люди сами решают каким будет сообщество, в котором им комфортно находиться.
+Рейтинг, как положительный, так и отрицательный, будет виден всем и ни кто не сможет его изменить или спрятать… всё это так же регулируется только смарт-контрактом.
+Все данные, как вы уже поняли, хранятся в сети блокчейн, что само по себе внушает доверие, относительно серверных вариантов. Ну и благодаря тому, что проект создаётся как DAO (децентрализованная автономная организация), у него нет главы, совета дерикторов, или любого другого человека, на которого могли бы воздействовать для доступа к данным пользователей. Люди предоставлены сами себе. Ни кто не ответственнен за сообщество, и в то же время, каждый его член несёт ответственность за происходящее вокруг. Более подробно ознакомиться с системой учёта активности можно в технической части данного документа.
+
+Так же мы уделили должное внимание защите вашего кошелька. Ни для кого не секрет, что сегодня есть довольно мощные вычислительные машины, которые медленно, но уверенно подбирают ключи к кошелькам. И естественно, есть специально обученные люди, которые с удовольствием занимаются подобными делами. Мы не будем рассуждать о порядочности их образа жизни, а с удовольствием поделимся с вами идеей, которая пришла к нам для решения данной проблемы.
+Что бы вы понимали, проблема заключается в том, что ключ, который состоит из 12 слов, берёт эти слова из списка BIP-39. Этих слов 2048. Да, кто то может сказать, что потребуются сотни лет, что бы подобрать ключи к «моему» кошельку… но в то же время, прогресс не стоит на месте, мощности вычислительных машин растут в геометрической прогрессии, да и нет вероятности, что именно «твой» кошелёк находится в конце списка алгоритмов подбора. В среднем, за месяц подбирают по 3-4 кошелька. И просто сидеть и ждать, когда подберут ключ к нашим кошелькам, это точно не про нас.
+Мы создали такой алгоритм, в котором при создании кошелька, пользователю даётся 11 слов из того самого списка, а 12-ое слово он вписывает сам. Набор символов от 5 до 8 знаков, включающий в себя буквы латинского алфавита (различный регистр) и арабские цифры. Согласитесь, даже одно такое слово будет подобрать очень не просто, а если ещё и 11 рандомных слов из 2048 -ми, то это становится достойной защитой нащих с вами средств и всех данных, которые вы доверите эко системе DES.
+
+Вполне возможно, что есть на земном шаре идейные ребята и девчата, которые знают как ещё больше обезопасить сеть и личные данные пользователей… и именно для этого мы и создаём данный проект. Сам блокчейн максимально дружелюбен к изменениям и дополнениям, которые несут рост возможностей сети. Ну а система вознаграждений не оставит равнодушным ни одного програмиста, у которого есть чем поделиться с миром.
+Раз уж так много говорим о вознаграждениях и активности, то предлагаем в следующей главе поговорить о ещё одном продукте, который направлен на поощрение активных пользователей сети.
