--- a/docs/Light paper/006.md
+++ b/docs/Light paper/006.md
@@ -1,1 +1,25 @@
+Глава 5. DES Арена.
 
+Вы уже наверняка поняли, что мы намерены создать осознанное, порядочное, активное сообщество, где каждый голос важен, каждое мнение учитывается, и любой участник сети является частью одного целого — эко системы DES. Конечно в обществе будут и простые ребята, которые не мечтают о звёздах с неба, и для них тоже созданны максимально комфортные условия, соответствующие их образу жизни. Но всё же, если тебе есть что показать миру и ты готов трудиться на благо сообщества, то сообщество готово вознаграждать тебя по заслугам.
+
+Для поощрения активности участников эко-системы проекта DES, будет реализован модуль DES Арена. На Арене, желающие смогут принимать участие в различных соревнованиях и получать монеты DES, а так же вознаграждения от партнёров проекта, спонсирующих тот или иной актив.
+Направлений может быть великое множество: лучший логотип компании или какого нибудь продукта; лучший дизайн сайта; новый код и дополнения в работе системы и многое другое - всё, где есть более 10 участников, может стать соревнованием в котором участники будут сражаться за звание Лучшего в своей сфере. 
+
+Давайте слегка углубимся в принцип действия данной Арены:
+Для данного продукта, как и для всех остальных, будет созданно своё DAO (DES-Arena). Держатели токенов управления - это некий «олимпийский совет», который рассматривает заявки на новые дисциплины, решает арбитражные ситуации, которые будут требовать вмешательства человека. В общем, олимпийский совет будет помогать смарт-контракту и поддерживать порядок в тех случаях, когда понадобится мнение экспертов. Членами олимпийского совета будут участники сети, которые зарекомендовали себя с положительной стороны, проявив активность и сознательность в сферах, которые направлены на развитие проекта и поиск новых талантов. У каждого члена совета так же будет свой общий рейтинг, где будет указанно, что он является участником данного актива, за что ему так же будут начисляться вознаграждения. И соответственно, если он будет совершать какие либо нечистые делишки, то он потеряет и рейтинг и место в совете. И вообще, его аккаунт попадёт в чёрный список сети, в следствии чего, он не сможет воспользоваться всеми возможностями эко системы. Штрафы будут накладываться относительно степени тяжести его поступка. Так что не переживайте — члены совета больше вас заинтересованны в надлежащем исполнении своих прямых обязанностей. 
+
+Основные направления дисциплин соревнований уже будут заложены изначально. Это различный визуал для проекта, маркетинговые материалы, логотипы, обложки и прочее… сайты, боты, авто-воронки и всё всё всё, что направленно на развитие, узнаваемость и масштабируемость компании.
+Каждый участник сообщества может зайти в DAO и принять участие в уже имеющейся дисциплине, заполнив определённую форму (тот же ник-нейм в сети, в какой дисциплине собирается участвовать (выбор из списка), ну и первую свою работу по данной тематике... может что то ещё).
+Фишка в том, что здесь есть возможность, активным участникам сообщества, создать свою дисциплину, заполнив специальную форму, где обязательным условием явяется описание дисциплины (чем она полезна для сообщества) и развёрнутого описания в текстовом и презентационном вариантах.
+После одобрения заявки, дисциплина размещается в DAO Арены и все желающие смогут принять участие в нём. Вознаграждение ТОПовым участникам будет рассчитано в соответствии с полезностью данной дисциплины для сообщества. Продержавшись определённое время победителем, у участников соревнований будет возможность стать членом олимпийского совета.
+Так же есть возможность для различных компаний, создавать свои дисциплины, для поиска грамотных специалистов в той или иной отраслях. Подобные активы, компании спонсируют сами, и вознаграждения победителям назначают тоже они. Механизм подачи заявок для компаний так же очень прост и удобен. Всё что будет нужно, просто заполнить анкету, в которой указать все данные дисциплины и размер вознаграждения. Дальше всё будет регулироваться смарт-контрактом по заданным параметрам. Любой желающий сможет ознакомиться с условиями и решить, будет он участвовать в данной дисциплине или нет.
+Это позволит разным компаниям искать достойных специалистов среди всех участников эко системы DES. А участники в свою очередь, смогут нарабатывать своё портфолио и быть востребованными у работодателей.
+
+Наверняка у вас возник вопрос: «Кто и как будет это всё оценивать и выбирать победителей?» - Хороший вопрос.
+В случае с другими компаниями, у них могут быть свои люди, которые будут оценивать участников соревнований.
+Ну а в случае с полезностями для проекта DES, оценивать труды будут все участники сети.
+
+Каждый активный участник сети сможет зайти в DAO Арены, выбрать любую дисциплину и проголосовать за одного из участников. Зачем им это делать, спросите вы? - Да. Они будут получать за это токены активности, зарабатывать различные достижения и за всё это конечно же получать монеты DES. Как уже говорилось ранее, самые ярые активисты со временем могут стать экспертами в различных сферах и иметь более высокую силу голоса при голосованиях по улучшению сети. 
+Естественно, пользователи которые участвуют в поддержке сети, в различных дисциплинах со своей специализацией, и те, кто просто наводят актив своими голосованиями и мнениями, все они имеют различные экспертности и соответственно учёт их активности ведётся по разному. Более подробно механизм Арены описан в технической части данного документа.
+
+Как вы могли заметить, основной упор вознаграждений мы делаем именно на активный слой общества. Но в тоже время, у нас есть довольно интересные предложения для тех, кто предпочитает только финансовое участие в проекте. Об этом мы поговорим в следующей главе...
