--- a/docs/Light paper/007.md
+++ b/docs/Light paper/007.md
@@ -1,1 +1,25 @@
+Глава 6. Инвестиции и финансы.
 
+Активисты — это конечно хорошо. Но без привлечения инвестиций, для воплощения всего этого в жизнь, далеко мы с вами не уедем. И вот что предлагает DES своим инвесторам:
+Конечно же как и у всех, это низкая цена монеты на присейле. Но мы не намерены собирать максимально возможное количество средств. И вообще, на протяжении всего проекта, вся бухгалтерия будет прозрачна и регулироваться смарт-контрактом. Мы рассчитаем сколько нам надо средств, для реализации продуктов первого уровня (об уровнях продуктов мы поговорим чуть позже), и за три раунда соберём нужную сумму для старта проекта DES. Как вы понимаете, на данном  этапе ещё не будет блокчейна и прочего… Будет только DAO DES и внутренний токен, который будет выдаваться инвесторам за их вложения. После запуска и выпуска своей монеты на своём блокчейне, все участники получат монеты проекта DES 1=1 внутреним токенам. 
+
+После запуска, активируется дорожная карта, и тут начинается всё самое интересное… 
+У каждого участника сети появится возможность инвестировать в тот продукт (из доступных на данном уровне) который ему по душе, и в котором он видит перспективы. Для удобства понимания, вам проще взглянуть на «Дорожную Карту» и всё станет понятно, но всё же постараемся описать это простым языком.
+В начале будет разработан и запущен блокчейн — это старт компании. Потом будут реализованны, мессенджер (телеграм-бот) и стейблкоины — это продукты первого уровня. После их запуска, откроется возможность инвестировать в продукты второго уровня, потом откроются продукты третьего и последующих уровней.
+Дорожная карта не зависит от временных отрезков. Выполнение планов на прямую связано с количеством привлечённых средств и установленным сроком сдачи продукта програмистами, которые взялись за его реализацию. Все этапы сбора средств и работы над продуктом, будут видны в режиме онлайн в дорожной карте на сайте компании.
+Как мы уже говорили, что основная направленность нашего проекта, это максимальная децентрализация. Она же является следствием того, что майнят (добывают) монеты проекта только активные участники сети своими действиями. За финансовое вложение в проект, ни каких процентов с общей эмиссии нет! 
+В чём же выгода для инвесторов, спросите вы? - вариантов несколько… есть как обычные решения, так и эксклюзив от эко системы DES.
+
+Как всегда, начинаем с банальщины как у всех, это потенциальный рост цены (закупаешься подешевле, потом продаёшь по дороже). Но тут тоже не всё так просто, так как у нас будет установлен лимит на приобретение токенов на присейле для одного кошелька. Понятно, что будут и те, кто захотят создать много кошельков и постараться собрать большое колличество монет в одних руках. Это их выбор. Мы будем только рады, что быстрее соберём нужную сумму и запустим проект.
+Благодаря постепенному разлоку, даже сотни кошельков, которые захотят слить монеты, не смогут сильно влиять на курс во время листинга. Ну а про активность мы уже говорили. Большой стейк очень не значительно влияет на силу голоса в проекте. Да, инвестирование финансов тоже является проявлением активности и учитывается, но на равне с активными участниками, которые инвестируюут своё время и интелектуальные ресурсы. Если под итожить эту мысль, участник с жирным стейком имеет такой же вес в проекте, как и очень активный участник с минимальным стейком в одном из пулов для поддержания сети. И то, для участия в жизни сети, пользователь должен развиваться в нескольких направлениях активности, поэтому даже если бы один человек владел всеми монетами, без активности в действиях, он мог бы повлиять только на курс, без возможности вносить какие то весомые изменения в работу сети. По поводу системы учёта активности мы поговорим в отдельной главе более подробно, а пока продолжим о привлекательности для финансовых вложений.
+
+Следующим привлекательным моментом для инвесторов, является процет комиссий с продуктов, в которые инвестор вкладывает свои средства. Как говорили выше, на присейле инвестор получает внутренний токен, который после выпуска основной монеты он сможет обменять один к одному. Как вы понимаете, количество монет на присейле будет ограниченное. Все эти монеты составляют 100% токенов DAO, которые предназначенны для вознаграждение инвесторам, каждого из продуктов первого уровня. Что это значит? - когда участник на присейле вкладывает свои средства, у него нет возможности выбрать какой либо из продуктов, так как самой системы учёта финансов и самого блокчейна пока нет. Все эти манипуляции совершаются вручную участниками DAO DES, согласно предоставленной сметы. Естественно, перед сбором средств будет проведен анализ необходимых ресурсов для создания данных продуктов и поиск команды програмистов, которая сможет это реализовать. После сбора необходимой суммы, создаётся цифровое соглашение с заморозкой средств на смарте и после выполнения работы все остаются довольны. Инвестор, который вложил свои средства на присейле, после запуска блокчейна и выпуска монеты DES, вместе с монетами получит токены управления DAO продуктов первого уровня и возможность получать часть с транзакций данного продукта. Токены управления будут начисляться относительно его вложений от  общего количества монет на присейле. Более подробно ознакомиться с механизмом назначения токенов управления продуктов и вознаграждения за комиссии, вы можете в технической части данного документа.
+После запуска стейблкоинов DESS, все последующие инвестиции в продукты, и в проект в целом, будут происходить в стейблах. Остальная механика таже: Инвестор вкладывает средства в продукт — получает токены управления DAO продукта — согласно количеству токенов получает часть комиссии с транзакций данного продукта. 
+Здесь же надо учитывать, что имея токены управления DAO продукта, есть возможность стать членом совета DAO DES, и принимать участие в глобольных вопросах эко системы DES.
+
+Так же к привлекательности финансовой части, относится участие в пулах валидаторов, сообщества и в пуле ликвидности. За поддержание сети начисляются вознаграждения, по заданным алгоритмам, не трогая основную эмиссию. Это всё так же более подробно описано в технической части данного документа.
+
+Описав привлекательные стороны поекта по отдельности, как активных участников, так и инвесторов, теперь можно поговорить о «Системе учёта активности» в целом. 
+Это так же можно считать отдельным продуктом, так как включает в себя множество сложных взаимосвязей как на цифровом, так и на социальном уровнях. Если кому то интересна тема именно создания идеального общества, то следующая глава как раз об этом...
+
+ 
