--- a/docs/Light paper/009.md
+++ b/docs/Light paper/009.md
@@ -1,1 +1,14 @@
+Заключение.
 
+В первую очередь, хотелось бы выразить слова благодарности за то, что вы нашли время ознакомиться с нашим предложением. Надеемся вам было интересно.
+Мы понимаем, что бешенный ритм современности диктует свои правила игры. Длинные и познавательные тексты уже давно ни кто не читает. Мы ценим ваше время, и собственно поэтому и был создан данный документ, что бы коротко и ёмко описать идеологию компании DAO DES и всё что с ней связанно.
+
+На протяжении всей книги мы с вами говорили о децентрализации. О её плюсах для общества в различных сферах жизнидеятельности, а так же о способах реализации идей по внедрению блокчейн технологий в нашу привычную жизнь. 
+
+Проект DES (Decentralized Eco Systems), является олицетворением той самой децентрализации, о которой сегодня многие говорят. Что бы вы понимали, даже сейчас, когда нет блокчейна и регулирующего аппарата, команда DES ведёт в ручную систему учёта активности каждого из участников команды. Мы фиксируем каждую активность/не активность в наших рабочих чатах, записывая данные в Excel-таблицу. Тестим свои идеи, так сказать, в режиме реального времени на себе.
+Мы уверенны что данный проект будет востребован на современном рынке, так как он изначально создавался не с целью личного обогащения и как очередной инструмент для заработка, а как платформа, на которой люди смогут насладиться децентрализацией во всей красе, ощущая её кристальную чистоту и прозрачность в каждой транзакции, в каждом процессе, в каждом уголке эко системы DES.
+
+На момент написания данного документа, Январь 2023 года, команда DES ведёт активный поиск таких же идейных криптанов для реализации поставленных задач. Кто-то внесёт свой вклад как инвестор, кто-то как програмист, ну и найдутся ребята, которые смогут помочь в продвижении идеи в массы. Естественно, каждая активность будет учитываться и вознаграждаться! На данном этапе будет лишь маленький плюс, относительно «Системы учёта активности» уже запущенного проекта. Каждый участник в работе над проектом, до его запуска, при желании и должной активности, сможет стать членом совета DAO DES. Даже если у вас не будет желания становиться совладельцем, вы сможете помогать проекту как специалист, оказывающий ту или иную услугу. Оплата услуг может быть как в токенах DES (до запуска своего блокчейна это будут временные токены DAO), так и дробная, включающая в себя часть токенов DES и другой, уже известной стабильной валюты. Процентное соотношение будет обговариваться по каждой задаче индивидуально.
+
+Основным информационным ресурсом проекта, является сайт DAODES. Так же есть форум (…) на котором и будут проводиться основные обсуждения всего, что связано с эко системой DES.
+Мы создаём сообщество активных и осознанных людей, где участники сети сами решают каким будет их путь. Будем рады видеть вас в наших рядах!
